Enable Java preview features in container