@@ -107,6 +107,6 @@ jib {
     // JVM memory is set from the environment - might be overridden in the
     // container configuration
     container.environment = [
-        JAVA_TOOL_OPTIONS: '-Xms3072m -Xmx3072m'
+        JAVA_TOOL_OPTIONS: '-Xms3072m -Xmx3072m --enable-preview'
     ]
 }
